force-app/main/default/objects/CEMS_Performance_Improvement_Plan__c/CEMS_Performance_Improvement_Plan__c.object-meta.xml
<CustomObject>
    <label>Performance Improvement Plan</label>
    <nameField>
        <label>Performance Improvement Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performance Improvement Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>