force-app/main/default/objects/CEMS_Performance_Improvement_Plan__c/fields/CEMS_Action__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Action__c</fullName>
    <label>Action</label>
    <type>TextArea</type>
</CustomField>