force-app/main/default/objects/CEMS_Performance_Improvement_Plan__c/fields/CEMS_Assigned_to_Employee__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Assigned_to_Employee__c</fullName>
    <label>Assigned to Employee</label>
    <referenceTo>CEMS_Personnel__c</referenceTo>
    <relationshipLabel>Performance Improvement Plan</relationshipLabel>
    <relationshipName>Performance_Improvement_Plan1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>