force-app/main/default/objects/CEMS_Performance_Improvement_Plan__c/fields/CEMS_Performance__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Performance__c</fullName>
    <label>Performance</label>
    <referenceTo>CEMS_Performance__c</referenceTo>
    <relationshipLabel>Performance Improvement Plan</relationshipLabel>
    <relationshipName>Performance_Improvement_Plan</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>