force-app/main/default/objects/CEMS_Performance_Improvement_Plan__c/fields/CEMS_Resource__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Resource__c</fullName>
    <label>Resource</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>